css fix for horizontal scrolling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,10 @@
 body {
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--background-end-rgb));
+  @apply overflow-x-hidden;
+  position: relative;
+  width: 100%;
+  -webkit-overflow-scrolling: touch;
 }
 
 @layer utilities {
